<resources>
    <string name="app_name">AddTheMinas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add">Add</string>
    <string name="title_form">Use Academy Form</string>
    <string name="mock_first_name">Evelyn</string>
    <string name="mock_last_name">Fernandes</string>
    <string name="mock_age">(23)</string>
    <string name="list_number">1</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>